--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -5,8 +5,8 @@ $charcoal-black: #282b2d;
 $snow-white: #f5f5f5;
 
 //fonts
-$my-prettyfont: 'DM Sans', sans-serif;
-$header-font: 'Oswald', sans-serif;
+$my-prettyfont: "DM Sans", sans-serif;
+$header-font: "Oswald", sans-serif;
 
 //text
 $small-font: 200 1rem/1.4 $my-prettyfont;
@@ -15,4 +15,4 @@ $title-font: 300 4rem/1.4 $my-prettyfont;
 $paragraph-font: 300 1.3rem/1.3 $my-prettyfont;
 $button-font: 400 1rem/1.3 $my-prettyfont;
 
-$mobile-width: 600px;
+$mobile-width: 800px;
