--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -1,19 +1,15 @@
+@import "@styles/theme.module.scss";
+
 .root {
-    height: 2.5em;
-    min-width: 4em;
-    border-radius: 10px;
-    text-align: center;
-    font-family: Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 300;
-    border: 1px solid #e1e1e1;
-    cursor: pointer;
-}
-
-.root:hover {
-    background-color: #e1e1e1;
-}
-
-.disabled {
-    pointer-events: none;
+  font-family: $paragraph-font;
+  font-weight: 500;
+  font-size: 20px;
+  text-align: center;
+  background-color: #ff8516;
+  color: #ffffff;
+  border-radius: 10px;
+  width: 6em;
+  height: 2em;
+  line-height: 2em;
+  cursor: pointer;
 }
