--- a/src/components/onboarding/onboarding.module.scss
+++ b/src/components/onboarding/onboarding.module.scss
@@ -25,10 +25,21 @@
   }
 }
 .button {
+  height: 2.5em;
+  min-width: 4em;
+  border-radius: 10px;
+  text-align: center;
+  font-family: Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  border: 1px solid #e1e1e1;
+  cursor: pointer;
 }
 
-.unset {
+.button:hover {
+  background-color: #e1e1e1;
 }
+
 .form {
   width: 100%;
   border-radius: 10px;
