--- a/src/components/register/register-form.css
+++ b/src/components/register/register-form.css
@@ -6,9 +6,9 @@ h1 {
 .form-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   justify-content: center;
-  margin: 50px auto;
+  margin: 5em auto;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
