--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -46,7 +46,7 @@ h1 {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: all 0.5s ease-in-out;
+  transition: background-color 0.2s ease-in-out;
 }
 
 .form-button:hover {
