starting to program mobile first responsiveness

--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -7,6 +7,7 @@ h1 {
   letter-spacing: 1%;
   margin-bottom: 0.5em;
 }
+//we want to scale up the max-width whilst the screen is se to $mobile-width
 
 .form-container {
   display: flex;
@@ -18,7 +19,12 @@ h1 {
   padding: 2em;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  max-width: 40%;
+  max-width: 75%;
+  //we want to program it to be mobile first
+  //so when it is more than 600px width it's gonna scale
+  @media (min-width: $mobile-width) {
+    max-width: 40%;
+  }
 }
 
 .form-input {
