--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -56,7 +56,8 @@ h1 {
 }
 
 .form-button:hover {
-  filter: grayscale(100%);
+  background-color: #2c2c6c;
+  filter: brightness(100%);
   transition: all 0.5s ease-in-out;
 }
 
