--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -61,6 +61,11 @@ h1 {
   transition: all 0.5s ease-in-out;
 }
 
+.form-button:active {
+  background-color: #000;
+  filter: brightness(100%);
+}
+
 label {
   color: #999;
   transform: translate(0.3rem, -3rem);
