--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -3,6 +3,8 @@ $white: #ffffff;
 $black: #000000;
 $charcoal-black: #282b2d;
 $snow-white: #f5f5f5;
+//header
+$header-color: #f6f6f6;
 //purple
 $our-purple: #2c2c6c;
 
