--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -153,7 +153,13 @@ input:not(:placeholder-shown) + label {
     margin: 0;
     color: gray;
   }
+
   h3 {
     margin: 0;
+  }
+  h3:hover {
+    color: $our-purple;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
   }
 }
