--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -94,6 +94,19 @@ input:not(:placeholder-shown) + label {
   color: #999;
   transform: translate(0.3rem, -4rem);
 }
+input {
+  z-index: 2;
+  padding: 0.5em;
+  margin: 0.3em 0 1.5em 0;
+  width: 80%;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+label {
+  z-index: 1;
+}
 
 //login bottom part
 
