--- a/src/components/login/login-form.modules.scss
+++ b/src/components/login/login-form.modules.scss
@@ -36,7 +36,7 @@ h1 {
   //we want to program it to be mobile first
   //so when it is more than 600px width it's gonna scale
   @media (min-width: $mobile-width) {
-    width: 40%;
+    width: 35%;
   }
 }
 
@@ -68,8 +68,9 @@ h1 {
   transition: background-color 0.2s ease-in-out;
 }
 
+/*
 .form-button:hover {
-  background-color: #2c2c6c;
+  background-color: #2c6c3d;
   filter: brightness(100%);
   transition: all 0.5s ease-in-out;
 }
@@ -78,6 +79,7 @@ h1 {
   background-color: #000;
   filter: brightness(100%);
 }
+*/
 
 label {
   color: #999;
@@ -113,8 +115,8 @@ label {
 .bottom-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: bottom;
+  align-items: left;
+  justify-content: left;
   margin: 1em 0 0 0;
   width: 100%;
 }
@@ -123,15 +125,27 @@ label {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   margin: 1em 0;
   width: 100%;
 }
 .br-line {
-  width: 40%;
   height: 1px;
   background-color: #e1e1e1;
   margin: 0 0.5em;
+}
+.left-line {
+  width: 40%;
+  @media (min-width: $mobile-width) {
+    width: 43%;
+  }
+}
+
+.right-line {
+  width: 40%;
+  @media (min-width: $mobile-width) {
+    width: 42%;
+  }
 }
 
 .google-linkedin-container {
@@ -142,12 +156,13 @@ label {
   flex-direction: row;
   align-items: bottom;
   column-gap: 20%;
-  justify-content: center;
+  justify-content: bottom;
   margin: 1em 0 0 0;
   width: 100%;
   font-size: x-small;
   @media (min-width: $mobile-width) {
     font-size: small;
+    column-gap: 30%;
   }
 }
 
@@ -158,7 +173,7 @@ label {
 }
 
 .forgot-pass:hover {
-  color: grey;
+  color: $our-purple;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
