--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -68,6 +68,7 @@ h1 {
   transition: background-color 0.2s ease-in-out;
 }
 
+/*
 .form-button:hover {
   background-color: #2c2c6c;
   filter: brightness(100%);
@@ -78,6 +79,7 @@ h1 {
   background-color: #000;
   filter: brightness(100%);
 }
+*/
 
 label {
   color: #999;
@@ -113,8 +115,8 @@ label {
 .bottom-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: bottom;
+  align-items: left;
+  justify-content: left;
   margin: 1em 0 0 0;
   width: 100%;
 }
@@ -123,12 +125,11 @@ label {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   margin: 1em 0;
   width: 100%;
 }
 .br-line {
-  width: 40%;
   height: 1px;
   background-color: #e1e1e1;
   margin: 0 0.5em;
@@ -142,12 +143,13 @@ label {
   flex-direction: row;
   align-items: bottom;
   column-gap: 20%;
-  justify-content: center;
+  justify-content: bottom;
   margin: 1em 0 0 0;
   width: 100%;
   font-size: x-small;
   @media (min-width: $mobile-width) {
     font-size: small;
+    column-gap: 30%;
   }
 }
 
@@ -158,7 +160,7 @@ label {
 }
 
 .forgot-pass:hover {
-  color: grey;
+  color: $our-purple;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
