--- a/src/pages/onboarding/onboarding.module.scss
+++ b/src/pages/onboarding/onboarding.module.scss
@@ -1,13 +1,17 @@
 @import "@styles/theme.module.scss";
 
 .container {
-  font: $large-font;
+  /* font: $large-font;
   display: flex;
   flex-direction: column;
   justify-content: start;
-  row-gap: 0.5em;
+  row-gap: 0.5em; */
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
   background-color: #f6f6f6;
-  height: 100vh;
 }
 .registration {
   padding-top: 2em;
@@ -16,7 +20,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  column-gap: 5em;
+  column-gap: 10em;
 
   @media only screen and (max-width: $mobile-width) {
     padding-top: 1em;
@@ -41,11 +45,10 @@
 }
 
 .form {
-  width: 100%;
+  width: 100vh;
   border-radius: 10px;
   height: 100vh;
   background-color: $white;
-  min-width: 60%;
 }
 
 .placeholder {
