--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -134,13 +134,26 @@ label {
   background-color: #e1e1e1;
   margin: 0 0.5em;
 }
+.left-line {
+  width: 40%;
+  @media (min-width: $mobile-width) {
+    width: 43%;
+  }
+}
+
+.right-line {
+  width: 40%;
+  @media (min-width: $mobile-width) {
+    width: 42%;
+  }
+}
 
 .google-linkedin-container {
 }
 
 .Forgot-create_Container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: bottom;
   column-gap: 20%;
   justify-content: bottom;
@@ -155,20 +168,19 @@ label {
 
 .forgot-pass {
   height: fit-content;
-  width: fit-content;
-  margin-top: 5%;
-}
+  display: flex;
+  flex-direction: row;
+  justify-items: space-between;
+  column-gap: 0.3em;
 
-.forgot-pass:hover {
-  color: $our-purple;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer;
+  h2 {
+    color: #4a555c;
+  }
 }
 
 .create-acc {
   height: min-content;
   width: max-content;
-  margin-top: 5%;
   column-gap: 0;
   display: flex;
   flex-direction: row;
@@ -176,7 +188,7 @@ label {
 
   h2 {
     margin: 0;
-    color: gray;
+    color: #4a555c;
   }
 
   h3 {
