--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -16,8 +16,9 @@ h1 {
   padding: 0 1em;
   display: flex;
   flex-direction: column;
+
   @media (min-width: $mobile-width) {
-    max-width: 1400px;
+    max-width: $desktop-width;
   }
 }
 .form-container {
@@ -29,8 +30,8 @@ h1 {
   justify-content: center;
   margin: 2em auto 5em auto;
   padding: 2em;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 0.5em;
+  box-shadow: $box-shadow;
   width: 75%;
 
   //we want to program it to be mobile first
@@ -45,12 +46,12 @@ h1 {
   padding: 1em 1em 0 1em;
   margin: 0;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: $our-border-radius;
   box-sizing: border-box;
   height: 4em;
 }
 .form-input:hover {
-  border: 1px solid #ff8516;
+  border: 1px solid $our-orange;
   transition: all 0.5s ease-in-out;
 }
 
@@ -60,10 +61,10 @@ h1 {
   width: 95%;
   padding: 0.5em;
   margin: 0.3em 0 1.5em 0;
-  background-color: #ff8516;
+  background-color: $our-orange;
   color: white;
   border: none;
-  border-radius: 4px;
+  border-radius: 0.5em;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
@@ -82,41 +83,36 @@ h1 {
 */
 
 label {
-  color: #999;
+  color: $small-grey-writing;
   transform: translate(0.3rem, -3rem);
   transition: all 0.2s ease-out;
   margin: 0.2em;
 }
 input:focus {
-  border-color: #ff8516;
+  border-color: $our-orange;
   transition: border-color 0.2s ease-out;
 }
 input:focus + label,
 input:not(:placeholder-shown) + label {
-  color: #999;
   transform: translate(0.3rem, -4rem);
 }
 input {
-  z-index: 2;
+  z-index: $z-index-modal;
   padding: 0.5em;
   margin: 0.3em 0 1.5em 0;
   width: 80%;
   border: none;
-  border-radius: 4px;
+  border-radius: $our-border-radius;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
 label {
-  z-index: 1;
+  z-index: $z-index-dropdown;
 }
 
 //login bottom part
 
 .bottom-container {
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: left;
   margin: 1em 0 0 0;
   width: 100%;
 }
@@ -151,52 +147,38 @@ label {
 .google-linkedin-container {
 }
 
-.Forgot-create_Container {
+.signin-container {
   display: flex;
   flex-direction: column;
   align-items: bottom;
-  column-gap: 20%;
+  row-gap: 2em;
   justify-content: bottom;
   margin: 1em 0 0 0;
-  width: 100%;
+  flex-wrap: wrap;
+
   font-size: x-small;
+
+  h2 {
+    color: $small-grey-writing;
+    a {
+      color: $our-orange;
+      font-weight: 800;
+    }
+  }
+  h3 {
+    color: black;
+    font-weight: 600;
+  }
+
   @media (min-width: $mobile-width) {
     font-size: small;
-    column-gap: 30%;
   }
 }
 
-.forgot-pass {
+.signin-internal {
   height: fit-content;
   display: flex;
   flex-direction: row;
   justify-items: space-between;
   column-gap: 0.3em;
-
-  h2 {
-    color: #4a555c;
-  }
-}
-
-.create-acc {
-  height: min-content;
-  width: max-content;
-  column-gap: 0;
-  display: flex;
-  flex-direction: row;
-  column-gap: 0.2em;
-
-  h2 {
-    margin: 0;
-    color: #4a555c;
-  }
-
-  h3 {
-    margin: 0;
-  }
-  h3:hover {
-    color: $our-purple;
-    transition: all 0.3s ease-in-out;
-    cursor: pointer;
-  }
 }
