structure is done everything is optimally explained in the code Creation of the new BOLD CLASS for css bold text in universal themes.scss

--- a/src/styles/theme.module.scss
+++ b/src/styles/theme.module.scss
@@ -37,3 +37,9 @@ $z-index-modal: 200;
 $phone-width: 550px;
 $mobile-width: 800px;
 $desktop-width: 1440px;
+
+/////////////////////////////////////////////////////// Classes //////////////////////////////////
+
+.bold {
+  font-weight: 800;
+}
