--- a/src/components/verification/verification-form.modules.scss
+++ b/src/components/verification/verification-form.modules.scss
@@ -1,1 +1,8 @@
 @import "@styles/theme.module.scss";
+
+.verify-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
