--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -25,10 +25,11 @@ h1 {
   background-color: $white;
   display: flex;
   flex-direction: column;
+  row-gap: 0;
 
   align-items: left;
   justify-content: center;
-  margin: 2em auto 5em auto;
+  margin: 2em auto 6em auto;
   padding: 2em;
   border-radius: 0.5em;
   box-shadow: $box-shadow;
@@ -99,7 +100,7 @@ input:not(:placeholder-shown) + label {
 input {
   z-index: $z-index-modal;
   padding: 0.5em;
-  margin: 0.3em 0 1.5em 0;
+  margin: 0.3em 0 0.5em 0;
   width: 80%;
   border: none;
   border-radius: $our-border-radius;
