--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -135,7 +135,10 @@ label {
   }
 }
 
-.google-linkedin-container .signin-container {
+.google-linkedin-container {
+}
+
+.signin-container {
   display: flex;
   flex-direction: column;
   align-items: bottom;
