--- a/src/components/onboarding/inputSlider/input-slider.module.scss
+++ b/src/components/onboarding/inputSlider/input-slider.module.scss
@@ -1,1 +1,35 @@
 @import "@styles/theme.module.scss";
+
+.slider {
+  color: $our-orange;
+}
+
+.slider .MuiSlider-rail {
+  color: gray;
+  transition: none;
+}
+
+.slider .MuiSlider-track {
+  transition: none;
+  color: $our-orange;
+}
+.slider .MuiSlider-thumb {
+  background-image: url("../assets/inputSlider-thumb.svg");
+  background-position: center;
+  background-color: transparent;
+  height: 25px;
+  width: 30px;
+  border-radius: 1px;
+  transform: translate(-0.85rem, 0rem);
+  transition: none;
+}
+
+.slider .MuiSlider-thumb::before {
+  box-shadow: none;
+}
+
+.slider .MuiSlider-thumb:hover,
+.slider .MuiSlider-thumb:active {
+  transition: none;
+  box-shadow: none;
+}
