--- a/src/pages/not-found/not-found.modules.scss
+++ b/src/pages/not-found/not-found.modules.scss
@@ -4,22 +4,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: top;
   height: 100vh;
   width: 100vw;
 
-  background-image: url(./provisional-wallpaper-mobile.jpg);
-  background-position: center;
+  background-image: url(./provisional-wallpaper-phone.jpg);
+  background-position-x: 30%;
+  background-position-y: 70%;
   background-size: cover;
   background-repeat: no-repeat;
 
   font-family: $header-font;
 
+  @media (min-width: $phone-width) {
+    background-image: url(./provisional-wallpaper-mobile.jpg);
+  }
+
   @media (min-width: $mobile-width) {
     background-image: url(./provisional-wallpaper.jpg);
+    justify-content: center;
   }
 }
 
+h1 {
+  padding-top: 2em;
+}
 p {
   font-weight: 300;
 }
