--- a/src/components/onboarding/inputSlider/input-slider.module.scss
+++ b/src/components/onboarding/inputSlider/input-slider.module.scss
@@ -1,5 +1,18 @@
 @import "@styles/theme.module.scss";
 
+.InputSlider_container {
+  position: relative;
+  width: 100%;
+  padding: 20px 0;
+}
+
+.slider-label {
+  position: absolute;
+  top: -15px; // Adjust this value as needed
+  transform: translateX(-50%);
+  white-space: nowrap;
+}
+
 .slider {
   color: $our-orange;
 }
@@ -13,6 +26,7 @@
   transition: none;
   color: $our-orange;
 }
+
 .slider .MuiSlider-thumb {
   background-image: url("../assets/inputSlider-thumb.svg");
   background-position: center;
