--- a/src/components/onboarding/capital/capital.module.scss
+++ b/src/components/onboarding/capital/capital.module.scss
@@ -4,6 +4,7 @@
   padding-top: 2.5em;
   padding-right: 2em;
   padding-left: 2em;
+  background-color: transparent;
 }
 .p {
   font-family: Helvetica, sans-serif;
