--- a/src/pages/onboarding/onboarding.module.scss
+++ b/src/pages/onboarding/onboarding.module.scss
@@ -1,12 +1,12 @@
 @import "@styles/theme.module.scss";
 
-.container {
+.root {
   /* font: $large-font;
   display: flex;
   flex-direction: column;
   justify-content: start;
   row-gap: 0.5em; */
-  position: fixed;
+
   left: 0;
   top: 0;
   width: 100%;
@@ -61,19 +61,19 @@
   font-weight: 300;
 }
 
-.root {
-  padding-top: 2.5em;
+.container {
   padding-right: 2em;
   padding-left: 2em;
+  background-color: transparent;
 }
 .p {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 300;
   color: #4a555c;
+  margin-top: 2em;
 }
 .h1 {
-  margin-top: 0.5em;
   margin-bottom: 1.5em;
   font-family: $header-font;
   font-size: 26px;
@@ -106,7 +106,6 @@
   font-size: 18px;
   font-weight: 400;
   color: black;
-  margin-bottom: 0.25em;
 }
 
 .description .p {
