--- a/src/components/onboarding/slider/slider.module.scss
+++ b/src/components/onboarding/slider/slider.module.scss
@@ -4,6 +4,7 @@
   background-color: #f6f6f6;
   height: fit-content;
   padding-top: 0.25em;
+  display: flex;
 
   &.dark {
     background-color: #e1e1e1;
@@ -11,19 +12,15 @@
   }
 }
 
-.sliderTrack {
-  width: 100%;
+.sliderSubTrack {
+  width: 10%; /* Each sub-slider takes up 10% of the width */
   height: 0.25em;
   background: #e1e1e1;
   position: relative;
   overflow: hidden;
-}
+  transition: background 2s ease-in-out; /* Increased duration for smoother transition */
 
-.sliderThumb {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  background: #ff8516;
-  transition: width 0.3s ease;
+  &.filled {
+    background: #ff8516;
+  }
 }
