--- a/src/components/onboarding/sdg/sdg.module.scss
+++ b/src/components/onboarding/sdg/sdg.module.scss
@@ -5,13 +5,15 @@
   padding-right: 2em;
   padding-left: 2em;
   background-color: transparent;
+  display: flex;
+  flex-direction: column;
 }
 .p {
   font-family: Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 1em;
   font-weight: 300;
   color: #4a555c;
-  margin-bottom: 2em;
+  margin-bottom: 3em;
 }
 .h1 {
   margin-bottom: 1em;
@@ -22,17 +24,6 @@
 }
 
 .input {
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 0.5em;
-  font-family: Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  color: #4a555c;
-  border-radius: 10px;
-  border: 1px solid #4a555c;
-  width: 100%;
-  margin-bottom: 6em;
 }
 
 .checkboxContainer {
@@ -42,17 +33,22 @@
 }
 
 .checkboxItem {
-  margin-right: 20px; /* Adjust as needed */
+  width: 100%;
+  @media (min-width: 1000px) {
+    width: 50%;
+  }
+
+  /* Adjust as needed */
 }
 
 .checkbox {
-  margin-right: 5px; /* Adjust as needed */
+  margin-right: 0.5em; /* Adjust as needed */
 }
 
 /* Styling for checkbox label */
 .checkboxItem label {
   font-family: Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  color: #4a555c;
+  font-size: 1em;
+  font-weight: 900;
+  color: #000;
 }
