fixed impact and added themes

--- a/src/components/onboarding/button/button.module.scss
+++ b/src/components/onboarding/button/button.module.scss
@@ -12,4 +12,15 @@
   height: 2em;
   line-height: 2em;
   cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+
+  &:hover {
+    background-color: darken(#ff8516, 10%);
+    color: lighten(#ffffff, 10%);
+  }
+}
+
+.selected {
+  background-color: darken(#ff8516, 10%);
+  color: lighten(#ffffff, 10%);
 }
