--- a/src/components/onboarding/capital/capital.module.scss
+++ b/src/components/onboarding/capital/capital.module.scss
@@ -6,6 +6,7 @@
   padding-left: 2em;
   background-color: transparent;
 }
+
 .p {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
@@ -13,6 +14,7 @@
   color: #4a555c;
   margin-bottom: 2em;
 }
+
 .h1 {
   margin-bottom: 1em;
   font-family: $header-font;
@@ -21,22 +23,27 @@
   color: black;
 }
 
-.input {
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 0.5em;
-  font-family: Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  color: #4a555c;
-  border-radius: 10px;
-  border: 1px solid #4a555c;
-  width: 100%;
-  margin-bottom: 6em;
+.sliderContainer {
+  padding: 1em;
+  margin-bottom: 4em; /* Adjusted margin */
+  text-align: center;
+  border-radius: 20px;
 }
 
-.slider {
-  padding-left: 1em;
-  padding-right: 1em;
-  margin-bottom: 6em;
+.valueBox {
+  display: inline-block;
+  border-radius: 20px;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+
+.valueText {
+  font-family: "Helvetica, sans-serif"; /* Directly set the font-family */
+  font-size: 24px;
+  font-weight: 500;
+  color: black;
+}
+
+.button {
+  margin-top: 4em; /* Space between slider and button */
 }
