--- a/src/components/onboarding/values/values.module.scss
+++ b/src/components/onboarding/values/values.module.scss
@@ -6,6 +6,7 @@
   padding-left: 2em;
   background-color: transparent;
 }
+
 .p {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
@@ -13,6 +14,7 @@
   color: #4a555c;
   margin-bottom: 2em;
 }
+
 .h1 {
   margin-bottom: 1em;
   font-family: $header-font;
@@ -21,7 +23,7 @@
   color: black;
 }
 
-.input {
+.select {
   padding-top: 1em;
   padding-bottom: 1em;
   padding-left: 0.5em;
@@ -32,27 +34,9 @@
   border-radius: 10px;
   border: 1px solid #4a555c;
   width: 100%;
-  margin-bottom: 6em;
+  margin-bottom: 6em; /* Adjusted margin */
 }
 
-.checkboxContainer {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 2em;
-}
-
-.checkboxItem {
-  margin-right: 20px; /* Adjust as needed */
-}
-
-.checkbox {
-  margin-right: 5px; /* Adjust as needed */
-}
-
-/* Styling for checkbox label */
-.checkboxItem label {
-  font-family: Helvetica, sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  color: #4a555c;
+.buttonContainer {
+  margin-top: 4em; /* Add more space above the button */
 }
