--- a/src/pages/onboarding/onboarding.module.scss
+++ b/src/pages/onboarding/onboarding.module.scss
@@ -11,15 +11,14 @@
 .registration {
   display: flex;
   flex-direction: row;
-  align-items: start;
+  align-items: start; // Align items vertically in the center
   justify-content: center;
-  column-gap: 10em;
   padding: 2em;
+  gap: 10em; // Add gap to space out items
 
   @media (max-width: $mobile-width) {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column; // Stack vertically on mobile
+    gap: 1em; // Adjust gap for mobile
   }
 }
 
@@ -88,25 +87,36 @@
 }
 
 .button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  color: #4a555c;
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   padding: 8px 16px;
-  color: black;
   background-color: white;
   cursor: pointer;
   text-transform: none;
+  justify-content: center;
+  align-items: start;
   font-size: 16px;
   transition: background-color 0.3s;
   outline: none;
+  width: 4em;
   &:hover {
     background-color: #f5f5f5;
   }
   &:focus {
     outline: none;
   }
+
+  @media (max-width: $mobile-width) {
+    align-self: center; // Center the button on mobile
+  }
+}
+
+.placeholder {
+  width: 4em;
 }
 
 .icon {
