--- a/src/pages/onboarding/onboarding.module.scss
+++ b/src/pages/onboarding/onboarding.module.scss
@@ -11,7 +11,7 @@
 .registration {
   display: flex;
   flex-direction: row;
-  align-items: start; // Align items vertically in the center
+  align-items: start; // Align items vertically at the start
   justify-content: center;
   padding: 2em;
   gap: 10em; // Add gap to space out items
@@ -97,6 +97,8 @@
 }
 
 .button {
+  display: flex;
+  align-items: center;
   font-family: Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -108,14 +110,14 @@
   cursor: pointer;
   text-transform: none;
   justify-content: center;
-  align-items: start;
-  font-size: 16px;
   transition: background-color 0.3s;
   outline: none;
-  width: 4em;
+  width: 4.5em; // Adjust width to auto
+
   &:hover {
     background-color: #f5f5f5;
   }
+
   &:focus {
     outline: none;
   }
@@ -123,12 +125,19 @@
   @media (max-width: $mobile-width) {
     align-self: center; // Center the button on mobile
   }
+
+  img {
+    margin-right: 4px; // Reduce margin to bring the icon and text closer
+    height: 16px; // Ensure the icon height is consistent
+    width: 16px; // Ensure the icon width is consistent
+    fill: currentColor; // Use the current text color for the icon
+  }
 }
 
 .placeholder {
-  width: 4em;
+  width: 4.5em;
 }
 
 .icon {
-  margin-right: 8px;
+  margin-right: 4px; // Reduced margin to bring icon closer to the text
 }
