--- a/src/components/register/register-form.modules.scss
+++ b/src/components/register/register-form.modules.scss
@@ -64,6 +64,11 @@ h1 {
   transition: background-color 0.2s ease-in-out;
 }
 
+.form-button:disabled {
+  background-color: #cccccc; /* or any other color indicating disabled state */
+  cursor: not-allowed;
+}
+
 /*
 .form-button:hover {
   background-color: #2c2c6c;
@@ -113,38 +118,54 @@ label {
 //login bottom part
 
 .bottom-container {
-  margin: 1em 0 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
   width: 100%;
 }
 
 .or-line-container {
+  justify-self: left;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: left;
   margin: 1em 0;
   width: 100%;
 }
+
 .br-line {
   height: 1px;
   background-color: #e1e1e1;
-  margin: 0 0.5em;
 }
+
 .left-line {
-  width: 40%;
-  @media (min-width: $mobile-width) {
-    width: 43%;
-  }
+  flex-grow: 1;
 }
 
 .right-line {
-  width: 40%;
-  @media (min-width: $mobile-width) {
-    width: 42%;
-  }
+  flex-grow: 1;
 }
 
 .google-linkedin-container {
+  width: 100%;
+}
+
+.google-button,
+.linkedin-button {
+  background-color: white !important;
+  border: 1px solid #e1e1e1 !important;
+  color: #666 !important;
+  width: 100%;
+  padding: 0.5em 1em;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start; /* Align text to the left */
+}
+
+.icon {
+  width: 1.5em; /* Adjust size as needed */
+  height: 1.5em; /* Adjust size as needed */
+  margin-right: 0.5em; /* Space between icon and text */
 }
 
 .signin-container {
@@ -153,10 +174,8 @@ label {
   align-items: bottom;
   row-gap: 2em;
   justify-content: bottom;
-  margin: 1em 0 0 0;
+  margin: 2em 0 0 0;
   flex-wrap: wrap;
-
-  font-size: x-small;
 
   h2 {
     color: $small-grey-writing;
@@ -170,6 +189,12 @@ label {
     font-weight: 600;
   }
 
+  h3:hover {
+    color: $our-orange;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+  }
+
   @media (min-width: $mobile-width) {
     font-size: small;
   }
@@ -181,4 +206,22 @@ label {
   flex-direction: row;
   justify-items: space-between;
   column-gap: 0.3em;
+}
+
+.terms {
+  row-gap: 2em;
+  justify-content: bottom;
+  margin: 3em 0 0 0;
+  flex-wrap: wrap;
+  font-size: small;
+
+  a {
+    color: $our-orange;
+    font-weight: 800;
+  }
+
+  h3 {
+    color: black;
+    font-weight: 600;
+  }
 }
