--- a/src/components/onboarding/sdg/sdg.module.scss
+++ b/src/components/onboarding/sdg/sdg.module.scss
@@ -1,23 +1,24 @@
 @import "@styles/theme.module.scss";
 
 .root {
+  padding-top: 2.5em;
   padding-right: 2em;
   padding-left: 2em;
   background-color: transparent;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 5em;
 }
+
 .p {
   font-family: Helvetica, sans-serif;
-  font-size: 1em;
+  font-size: 16px;
   font-weight: 300;
   color: #4a555c;
   margin-bottom: 2em;
 }
+
 .h1 {
+  margin-bottom: 1em;
   font-family: $header-font;
-  font-size: 2em;
+  font-size: 26px;
   font-weight: 500;
   color: black;
 }
@@ -25,7 +26,7 @@
 .checkboxContainer {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 0.8em;
+  gap: 0.5em;
   margin-bottom: 2em;
 }
 
@@ -34,31 +35,29 @@
   @media (min-width: 1100px) {
     max-width: 45%;
   }
-
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-bottom: 0.5em;
-
   border: 1px solid #b3b3b3;
   border-radius: 12px;
-  padding: 0.4em;
+  padding: 0.25em; /* Reduced padding */
+  position: relative;
+  cursor: help; /* Shows help cursor to indicate tooltip */
 }
 
-.checkbox {
-  margin-right: 0.5em; /* Adjust as needed */
-}
-.checkboxText-container {
-  flex-direction: column;
-}
 .checkboxTitle {
   font-size: 1em;
   font-weight: 600;
   color: black;
 }
-.checkboxText {
-  max-width: 150px; /* Set a fixed width */
-  white-space: nowrap; /* Prevent text from wrapping */
-  overflow: hidden; /* Hide overflowing text */
-  text-overflow: ellipsis; /* Display ellipsis (...) when text overflows */
+
+.checkboxTextContainer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.next_button {
+  margin-top: 4em;
 }
