--- a/src/components/onboarding/name/name.module.scss
+++ b/src/components/onboarding/name/name.module.scss
@@ -1,10 +1,8 @@
 @import "@styles/theme.module.scss";
 
 .root {
-  padding-top: 2.5em;
-  padding-right: 2em;
-  padding-left: 2em;
   background-color: transparent;
+  padding: 0;
 }
 
 .p {
