--- a/src/components/onboarding/sdg/sdg.module.scss
+++ b/src/components/onboarding/sdg/sdg.module.scss
@@ -1,10 +1,8 @@
 @import "@styles/theme.module.scss";
 
 .root {
-  padding-top: 2.5em;
-  padding-right: 2em;
-  padding-left: 2em;
   background-color: transparent;
+  padding: 0;
 }
 
 .p {
@@ -21,29 +19,45 @@
   font-size: 26px;
   font-weight: 500;
   color: black;
+
+  .sdgText {
+    color: #ff8516;
+    text-decoration: underline;
+  }
 }
 
 .checkboxContainer {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 0.5em;
   margin-bottom: 2em;
 }
 
 .checkboxItem {
-  width: 100%;
-  @media (min-width: 1100px) {
-    max-width: 45%;
-  }
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-bottom: 0.5em;
+  flex-direction: column;
+  padding: 1em;
   border: 1px solid #b3b3b3;
   border-radius: 12px;
-  padding: 0.25em; /* Reduced padding */
-  position: relative;
-  cursor: help; /* Shows help cursor to indicate tooltip */
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover {
+    border: 1px solid #ff8516;
+    color: #ff8516;
+    background-color: #fff3e8;
+  }
+}
+
+.selected {
+  border: 1px solid #ff8516;
+  color: #ff8516;
+  background-color: #fff3e8;
+
+  .checkboxTitle,
+  .checkboxDescription {
+    color: #ff8516;
+  }
 }
 
 .checkboxTitle {
@@ -52,10 +66,16 @@
   color: black;
 }
 
-.checkboxTextContainer {
-  display: flex;
-  flex-direction: column;
-  position: relative;
+.checkboxDescription {
+  font-size: 0.85em;
+  color: #4a555c;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.checkboxItem:hover .checkboxDescription {
+  white-space: normal;
 }
 
 .next_button {
