--- a/src/components/onboarding/stage/stage.module.scss
+++ b/src/components/onboarding/stage/stage.module.scss
@@ -1,10 +1,8 @@
 @import "@styles/theme.module.scss";
 
 .root {
-  padding-top: 2.5em;
-  padding-right: 2em;
-  padding-left: 2em;
   background-color: transparent;
+  padding: 0;
 }
 
 .p {
@@ -25,6 +23,9 @@
 
 .stages {
   display: flex;
+  @media (max-width: 600px) {
+    justify-content: center;
+  }
   flex-wrap: wrap;
   gap: 0.5em 1em; // Adjusted to create spacing similar to the image
 }
@@ -47,6 +48,6 @@
 .button:hover,
 .button.selected {
   border: 1px solid #ff8516;
-  color: white;
-  background-color: #ff8516;
+  color: #ff8516;
+  background-color: #fff3e8;
 }
