--- a/src/components/onboarding/strategy/strategy.module.scss
+++ b/src/components/onboarding/strategy/strategy.module.scss
@@ -1,10 +1,8 @@
 @import "@styles/theme.module.scss";
 
 .root {
-  padding-top: 2.5em;
-  padding-right: 2em;
-  padding-left: 2em;
   background-color: transparent;
+  padding: 0;
 }
 
 .p {
@@ -25,6 +23,9 @@
 
 .strategy {
   display: flex;
+  @media (max-width: $mobile-width) {
+    justify-content: center;
+  }
   flex-wrap: wrap;
   gap: 0.5em; /* Use gap for consistent spacing */
   margin-bottom: 2em;
@@ -48,8 +49,8 @@
 .button:hover,
 .button.selected {
   border: 1px solid #ff8516;
-  color: white;
-  background-color: #ff8516;
+  color: #ff8516;
+  background-color: #fff3e8;
 }
 
 .next_button {
