--- a/src/components/onboarding/values/values.module.scss
+++ b/src/components/onboarding/values/values.module.scss
@@ -1,10 +1,8 @@
 @import "@styles/theme.module.scss";
 
 .root {
-  padding-top: 2.5em;
-  padding-right: 2em;
-  padding-left: 2em;
   background-color: transparent;
+  padding: 0;
 }
 
 .p {
@@ -23,20 +21,37 @@
   color: black;
 }
 
-.select {
-  padding-top: 1em;
-  padding-bottom: 1em;
-  padding-left: 0.5em;
+.valuesContainer {
+  display: flex;
+  flex-wrap: wrap;
+  @media (max-width: $mobile-width) {
+    justify-content: center;
+  }
+  gap: 0.5em 1em;
+}
+
+.button {
+  border-radius: 20px;
+  border: 1px solid #e1e1e1;
+  text-align: center;
+  line-height: 2em;
   font-family: Helvetica, sans-serif;
   font-size: 16px;
   font-weight: 300;
-  color: #4a555c;
-  border-radius: 10px;
-  border: 1px solid #4a555c;
-  width: 100%;
-  margin-bottom: 6em; /* Adjusted margin */
+  width: 9em;
+  height: 2.5em;
+  cursor: pointer;
+  background-color: white;
+  transition: background-color 0.3s, border 0.3s;
+}
+
+.button:hover,
+.button.selected {
+  border: 1px solid #ff8516;
+  color: #ff8516;
+  background-color: #fff3e8;
 }
 
 .buttonContainer {
-  margin-top: 4em; /* Add more space above the button */
+  margin-top: 4em;
 }
