--- a/src/pages/onboarding/onboarding.module.scss
+++ b/src/pages/onboarding/onboarding.module.scss
@@ -11,24 +11,32 @@
 .registration {
   display: flex;
   flex-direction: row;
-  align-items: start; // Align items vertically at the start
+  align-items: flex-start;
   justify-content: center;
   padding: 2em;
-  gap: 10em; // Add gap to space out items
+  gap: 10em; // Reduced gap between items
 
   @media (max-width: $mobile-width) {
-    flex-direction: column; // Stack vertically on mobile
-    gap: 1em; // Adjust gap for mobile
+    flex-direction: column;
+    gap: 1em;
+    padding: 1em;
   }
 }
 
 .form {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1em; // Adjust the row gap to be smaller
   width: 100%;
   max-width: 600px;
   background-color: #ffffff;
   border-radius: 10px;
   padding: 2em;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
+  @media (max-width: $mobile-width) {
+    padding: 1em;
+  }
 }
 
 .p {
@@ -36,48 +44,65 @@
   font-size: 16px;
   font-weight: 300;
   color: #4a555c;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.5em; // Reduce the bottom margin
 }
 
 .h1 {
-  margin-bottom: 1.5em;
   font-family: $header-font;
   font-size: 26px;
   font-weight: 500;
   color: black;
+  margin-top: -2em; // Reduce the top margin
+  margin-bottom: 0; // Remove bottom margin if any
+}
+
+.rolesContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  @media (max-width: $mobile-width) {
+    flex-direction: column;
+  }
 }
 
 .role {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   border: 1px solid #e1e1e1;
   border-radius: 10px;
   padding: 1em;
-  margin-bottom: 1em;
-  cursor: pointer;
-  transition: background-color 0.3s, border 0.3s, color 0.3s;
+  background: radial-gradient(
+    149.83% 149.83% at 39.62% 4.31%,
+    #fff9f4 41.58%,
+    #f3deff 100%
+  );
+  flex: 1;
+  margin-right: 1em; // Add margin between buttons
+  box-sizing: border-box;
+
+  &:last-child {
+    margin-right: 0; // Remove margin for the last child
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-right: 0; // Remove margin for mobile
+    margin-bottom: 1em; // Add margin for bottom on mobile
+  }
 }
 
-.role:hover {
-  background-color: #ff8516;
-  border: 1px solid #ff8516;
-  color: white;
-
-  img {
-    filter: brightness(0) invert(1); // Make icons white
-  }
-
-  .description .h1,
-  .description p {
-    color: white; // Change text color to white
-  }
+.icon {
+  width: 40px;
+  height: 40px;
+  margin-bottom: 1em;
 }
 
 .description {
   flex-grow: 1;
-  margin-left: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .description .h1 {
@@ -85,7 +110,7 @@
   font-size: 18px;
   font-weight: 400;
   color: black;
-  margin: 0;
+  margin: 0 0 0.5em 0;
 }
 
 .description p {
@@ -93,7 +118,7 @@
   font-size: 14px;
   font-weight: 300;
   color: #4a555c;
-  margin: 0;
+  margin: 0 0 1em 0;
 }
 
 .button {
@@ -136,6 +161,20 @@
 
 .placeholder {
   width: 4.5em;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; // Ensures buttons align at the bottom
+}
+
+.standardButton {
+  height: 2em; // Set a standard height for both buttons
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0; // Remove extra padding if needed
 }
 
 .icon {
