--- a/src/components/onboarding/capital/capital.module.scss
+++ b/src/components/onboarding/capital/capital.module.scss
@@ -42,6 +42,39 @@
   color: black;
 }
 
-.button {
+.next_button {
   margin-top: 4em; /* Space between slider and button */
+}
+
+.investmentRanges {
+  display: flex;
+  @media (max-width: 600px) {
+    justify-content: center;
+  }
+  flex-wrap: wrap;
+  gap: 0.5em 1em; // Adjusted to create spacing similar to the image
+}
+
+.button {
+  border-radius: 20px;
+  border: 1px solid #e1e1e1;
+  text-align: center;
+  line-height: 2em;
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  min-width: 9em; // Adjusted width to match the image
+  padding: 0 1em;
+  width: fit-content;
+  height: 2.5em; // Adjusted height to match the image
+  cursor: pointer;
+  background-color: white; // Ensures button has white background
+  transition: background-color 0.3s, border 0.3s;
+}
+
+.button:hover,
+.button.selected {
+  border: 1px solid #ff8516;
+  color: #ff8516;
+  background-color: #fff3e8;
 }
