--- a/src/pages/onboarding/onboarding.module.scss
+++ b/src/pages/onboarding/onboarding.module.scss
@@ -28,7 +28,7 @@
   flex-direction: column;
   row-gap: 1em; // Adjust the row gap to be smaller
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
   background-color: #ffffff;
   border-radius: 10px;
   padding: 2em;
@@ -93,8 +93,8 @@
 }
 
 .icon {
-  width: 40px;
-  height: 40px;
+  width: 4em;
+  height: 4em;
   margin-bottom: 1em;
 }
 
