--- a/src/components/registration/verification/verification-form.modules.scss
+++ b/src/components/registration/verification/verification-form.modules.scss
@@ -5,10 +5,17 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 2em 0;
+
+  column-gap: 1em;
 }
 
 .loading {
   display: flex;
   width: 100%;
   justify-content: center;
+}
+
+.receive-resend-container {
+  margin: 2em 0;
 }
