--- a/src/pages/dashboard/home/home.module.scss
+++ b/src/pages/dashboard/home/home.module.scss
@@ -14,7 +14,7 @@
   align-items: flex-start;
   justify-content: center;
   padding: 2em;
-  gap: 10em; // Reduced gap between items
+  gap: 10em;
 
   @media (max-width: $mobile-width) {
     flex-direction: column;
@@ -29,7 +29,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  row-gap: 1em; // Adjust the row gap to be smaller
+  row-gap: 1em;
   width: 100%;
   max-width: 800px;
   background-color: #ffffff;
@@ -56,18 +56,20 @@
   font-size: 20px;
   font-weight: 300;
   color: #4a555c;
-  margin-bottom: 0.5em; // Reduce the bottom margin
+  margin-bottom: 0.5em;
 }
 
-.logout {
+.logout,
+.contact {
   display: flex;
   flex-direction: row;
-  column-gap: 0.2em;
+  align-items: center;
+  column-gap: 0.5em;
   font-family: Helvetica, sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 300;
   color: #4a555c;
-  margin-bottom: 0.5em; // Reduce the bottom margin
+  margin-bottom: 0.5em;
   cursor: pointer;
 }
 
@@ -76,23 +78,23 @@
   font-size: 40px;
   font-weight: 600;
   color: $our-orange;
-  margin-top: -2em; // Reduce the top margin
+  margin-top: -2em;
   margin-bottom: 1em;
 }
 
 .h2 {
   font-family: Helvetica, sans-serif;
-
   font-size: 20px;
   font-weight: 300;
   color: #4a555c;
-  margin-top: -2em; // Reduce the top margin
-  margin-bottom: 3em; // Remove bottom margin if any
+  margin-top: -2em;
+  margin-bottom: 3em;
 
   span {
     font-weight: 600;
   }
 }
+
 .rolesContainer {
   display: flex;
   flex-direction: row;
@@ -116,16 +118,16 @@
     #f3deff 100%
   );
   flex: 1;
-  margin-right: 1em; // Add margin between buttons
+  margin-right: 1em;
   box-sizing: border-box;
 
   &:last-child {
-    margin-right: 0; // Remove margin for the last child
+    margin-right: 0;
   }
 
   @media (max-width: $mobile-width) {
-    margin-right: 0; // Remove margin for mobile
-    margin-bottom: 1em; // Add margin for bottom on mobile
+    margin-right: 0;
+    margin-bottom: 1em;
   }
 }
 
@@ -174,7 +176,7 @@
   justify-content: center;
   transition: background-color 0.3s;
   outline: none;
-  width: 4.5em; // Adjust width to auto
+  width: 4.5em;
 
   &:hover {
     background-color: #f5f5f5;
@@ -185,14 +187,14 @@
   }
 
   @media (max-width: $mobile-width) {
-    align-self: center; // Center the button on mobile
+    align-self: center;
   }
 
   img {
-    margin-right: 4px; // Reduce margin to bring the icon and text closer
-    height: 16px; // Ensure the icon height is consistent
-    width: 16px; // Ensure the icon width is consistent
-    fill: currentColor; // Use the current text color for the icon
+    margin-right: 4px;
+    height: 16px;
+    width: 16px;
+    fill: currentColor;
   }
 }
 
@@ -203,17 +205,24 @@
 .buttonContainer {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end; // Ensures buttons align at the bottom
+  justify-content: flex-end;
 }
 
 .standardButton {
-  height: 2em; // Set a standard height for both buttons
+  height: 2em;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0; // Remove extra padding if needed
+  padding: 0;
 }
 
 .icon {
-  margin-right: 4px; // Reduced margin to bring icon closer to the text
+  margin-right: 4px;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 100%;
 }
