almost finished last touches

--- a/src/components/onboarding/impact/impact.module.scss
+++ b/src/components/onboarding/impact/impact.module.scss
@@ -45,3 +45,9 @@
 .button {
   margin-top: 4em; /* Space between slider and button */
 }
+
+.underline {
+  text-decoration: underline;
+  cursor: pointer;
+  color: #ff8516;
+}
