grid styling: Made the structure for the dashboard grid. it's all commented

--- a/src/pages/dashboard/dashboard.module.scss
+++ b/src/pages/dashboard/dashboard.module.scss
@@ -1,11 +1,58 @@
 @import "@styles/theme.module.scss";
 
+/*
+
+Here we keep styling 
+DESKTOP FIRST
+because the design been styled for desktop browsers
+
+original design total width:
+1728px
+
+sidebar width:
+288px (16,7 % =~= 17%)
+
+main content width:
+58% (the remaining)
+
+company profile width:
+420px (24,31% =~= 24%)
+
+we remain for 1% of space between the divs
+then in .root we justify the content 
+in the space between the divs
+
+*/
+
 .root {
   display: flex;
+  flex-direction: row;
 }
 
+//here we set the width
+//
+.sides-common-style {
+  overflow: hidden;
+  padding: 10px;
+}
+
+.sideBar-container {
+  height: 100%;
+  flex: 0 0 17%;
+}
+.company-profile-container {
+  height: 100%;
+  flex: 0 0 24%;
+}
+
+//observation:
+// these where already written
+//check the structure later
+//upon finding possible problems
 .mainContent {
-  flex-grow: 1;
+  height: 100%;
+  flex: 1 1 59%;
+  overflow-y: auto;
 }
 
 .dashboardContent {
